Verion 0.9.44dev (?? ??? 2004)
  - Allow admin users to import events into other user's calendars.
  - Patch 931248: Mishandled single quotes in event name/description when
    overriding a conflict.
  - Fixed bug 929977: site_extras not showing up in event popups when enabled
  - Updated purge.php to not use '<?' and always use '<?php' instead.
  - Added support for repeating events in iCal import
  - Fixed bug 923129: Used "unnamed view" for views without a name
    so user can edit/delete the view.
  - Updated README.html to not assume user has downloaded user manual.
    Instead link to the download area on SourceForge.
  - Fixed bug 903285: PHP balise problem <? ?>
    (fixed for view_d.php, didn't check all files)
  - Fixed bug 850719: repeating whole day event has only on the
  - Improved sizing of event popups on MSIE/Mozilla
  - Fixed export URL so users should now be prompted to save with
    correct filename.
  - Added delete link on list of unapproved events, making it easier to
    delete bogus events.
  - For external users, use email address as fullname if only an email address
    was given.
  - Fixed bug 81255: when site extras are displayed in popups, reminders
    were not handled properly.  (Yes and No were printed in the wrong place).
  - Fixed bug 872036: Allow '-' in username
  - Fixed bug 892081: Don't allow users to use work hours with end hour
    before start hour (in admin and pref).
  - Fixed bug 858560: Allow adding events more than four years in the future.
  - Fixed bug: Do not list Public Access in assistant_edit.php.
  - Added back "Assistants" link in trailer that was accidentally removed.
  - Fixed bug 914537: Error when user rejects an event.
  - Fixed bug 920796: printer friendly versions of Views were always showing
    the current date
  - Fixed bug 921557: warnings about invalid parameter for localtime().
  - Fixed bug 919038: category selecting was not working when viewing
    another user's calendar.